--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>main{max-width: 100%;}</style>
     <title>Stoic Wallet - By Toniq Labs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="max-width:100vw"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -46,3 +47,4 @@
     </script>
   </body>
 </html>
+ 
